# Navigation-Drone

./: README.md  exe.py  movement.m  mvmnt.py  new  2.txt  output.avi
fouriertrack/: main.cpp
project/: CMakeLists.txt  README.md  axes.md  channels.cpp  channels.hpp  detection.cpp  detection.hpp  gui.cpp  gui.hpp  location.cpp  location.hpp  main.cpp  pid.cpp  pid.hpp  quad_serial.cpp  quad_serial.hpp
python_scripts/: exe.py  mvmnt.py  template.py
sensors/: sensor.cpp  sensor.py
sources/fouriertrack/: CMakeLists.txt
